Update Services Section Mediterravenir

--- a/now-ui-kit-react-master-main/src/assets/scss/now-ui-kit/_navbar.scss
+++ b/now-ui-kit-react-master-main/src/assets/scss/now-ui-kit/_navbar.scss
@@ -138,7 +138,7 @@
     }
 
     &.navbar-transparent{
-        background-color: $transparent-bg !important;
+        background-color: #497fc8 !important;
         box-shadow: none;
         color: $white-color;
         padding-top: 20px !important;
